--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
   <body>
     <!-- the entire body must be written by student -->
-    <form>
+    <form id="form">
       <label for="fontsize">Font Size:</label>
       <input
         type="number"
@@ -21,7 +21,7 @@
       <label for="fontcolor">Font Color:</label>
       <input type="color" id="fontcolor" name="fontcolor" value="#000000" />
       <br />
-      <input type="submit" value="Save" />
+      <input id="submit" type="submit" value="Save" />
     </form>
 
     <script type="text/javascript" src="./script.js"></script>
